--- a/app/Resources/translations/messages.fi.yml
+++ b/app/Resources/translations/messages.fi.yml
@@ -8,6 +8,7 @@ navigation:
     home: "Etusivu"
     admin: "Ylläpito"
     front: "Etusivu"
+    share: "Kerro blogista"
 
 hero:
     hello: "Terve"
