--- a/app/Resources/translations/messages.fi.yml
+++ b/app/Resources/translations/messages.fi.yml
@@ -37,6 +37,7 @@ side:
 listing:
     in: "kategoriassa"
     comments: "kommenttia"
+    comments_write: "Kirjoita kommentti"
 
     posts_not_found: "Ei kirjoituksia!"
 
